--- a/requirements.txt
+++ b/requirements.txt
@@ -29,9 +29,11 @@ djangocms-video==0.2.0
 django-cms-smartsnippets==0.1.3
 GeoIP==1.3.2
 html5lib==0.9999999
+mysql-client==1.3.7
 MySQL-python==1.2.5
 Pillow==3.1.1
 python-ldap==2.4.25
 pytz==2015.7
+requests=2.9.1  # check if we need this
 six==1.10.0
 tzlocal==1.2
