--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-classy-tags==0.7.1
 django-cms==3.2.1
 django-easy-select2==1.3.2
 django-formtools==1.0
+djangocms-forms==0.1.16
 django-getenv==1.3.1
 django-reversion==1.8.7
 django-sekizai==0.9.0
