--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ django-easy-select2==1.3.2
 django-filer==1.2.0
 django-formtools==1.0
 django-ipware==1.1.3
-django-mptt==0.8.3
+#django-mptt==0.8.3
 django-picklefield==0.3.2
 django-polymorphic==0.8.1
 django-reversion==1.8.7
@@ -37,9 +37,11 @@ jsonfield==1.0.3
 #MySQL-python==1.2.5
 mysqlclient==1.3.7
 Pillow==3.2.0
+python-ldap==2.4.25
 pytz==2016.4
 requests==2.9.1
 six==1.10.0
 tablib==0.11.2
 tzlocal==1.2.2
 Unidecode==0.4.19
+GeoIP==1.3.2
