--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-sekizai==0.9.0
 Django-Select2==4.3.2
 django-taggit==0.18.0
 django-treebeard==4.0
+django-auth-ldap==1.2.7
 djangocms-admin-style==1.1.1
 djangocms-column==1.6.0
 djangocms-forms==0.1.16
