--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ django-ckeditor==5.0.3
 django-classy-tags==0.7.2
 django-cms==3.2.5
 django-cms-smartsnippets==0.1.3
-# django-dashing==0.3.2
+django-dashing==0.3.2
 django-easy-select2==1.3.2
 django-filer==1.2.0
 django-formtools==1.0
