--- a/requirements.txt
+++ b/requirements.txt
@@ -47,4 +47,5 @@ tablib==0.11.2
 tzlocal==1.2.2
 Unidecode==0.4.19
 GeoIP==1.3.2
+django-debug-toolbar==1.6
 # https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
