--- a/requirements.txt
+++ b/requirements.txt
@@ -51,4 +51,5 @@ django-debug-toolbar==1.6
 django-fsm==2.4.0
 graphviz==0.5.2
 netaddr==0.7.19
+djangocms-page-sitemap==0.4.1
 # https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
