--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,6 @@ cryptography>=1.4
 django-ipware>=1.1.5
 lxml>=3.6.1
 requests>=2.10.0
-django-admin-sortable2==0.6.10
+# django-admin-sortable2==0.6.10
 django-admin-sortable==2.1
 # https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
