--- a/requirements.txt
+++ b/requirements.txt
@@ -58,4 +58,7 @@ lxml>=3.6.1
 requests>=2.10.0
 # django-admin-sortable2==0.6.10
 django-admin-sortable==2.1
+# django-allauth==0.31.0
+# django-oauth-toolkit==0.12.0
+django-admin-shortcuts==1.2.7
 # https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
