--- a/requirements.txt
+++ b/requirements.txt
@@ -61,4 +61,10 @@ django-admin-sortable==2.1
 # django-allauth==0.31.0
 # django-oauth-toolkit==0.12.0
 django-admin-shortcuts==1.2.7
+reportlab==3.4.0
+xhtml2pdf==0.0.6
+xlwt==0.7.4
+PyPDF2==1.26.0
+bs4==0.0.1
+django-filter==1.0.2
 # https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
