--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,6 @@ netaddr==0.7.19
 djangocms-page-sitemap==0.4.1
 cryptography>=1.4
 django-ipware>=1.1.5
-lxml>=3.6.1
 requests>=2.10.0
 # django-admin-sortable2==0.6.10
 django-admin-sortable==2.1
@@ -67,4 +66,10 @@ xlwt==0.7.4
 PyPDF2==1.26.0
 bs4==0.0.1
 django-filter==1.0.2
+django-tastypie==0.13.3
+mimeparse==0.1.3
+python-mimeparse==1.6.0
+defusedxml==0.5.0
+lxml>=3.6.1
+PyYAML==3.12
 # https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
