--- a/requirements.txt
+++ b/requirements.txt
@@ -72,4 +72,5 @@ python-mimeparse==1.6.0
 defusedxml==0.5.0
 lxml>=3.6.1
 PyYAML==3.12
+django-colorfield==0.1.12
 # https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
