--- a/requirements.txt
+++ b/requirements.txt
@@ -73,4 +73,5 @@ defusedxml==0.5.0
 lxml>=3.6.1
 PyYAML==3.12
 django-colorfield==0.1.12
+#django-blog-zinnia==0.18.1
 # https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
