--- a/requirements.txt
+++ b/requirements.txt
@@ -74,6 +74,8 @@ lxml>=3.6.1
 PyYAML==3.12
 django-colorfield==0.1.12
 django-controlcenter==0.2.3
+django-imagekit==4.0.1
+django-countries==4.5
 #django-statsy==0.2.2
 #django-blog-zinnia==0.18.1
 # https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
