--- a/requirements.txt
+++ b/requirements.txt
@@ -78,5 +78,5 @@ django-countries==4.5
 icalendar==3.11.4
 #django-statsy==0.2.2
 #django-blog-zinnia==0.18.1
-django-ckeditor-filebrowser-filer==0.2.3
+#django-ckeditor-filebrowser-filer==0.2.3
 # https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
