--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,8 @@ django-colorfield==0.1.12
 django-imagekit==4.0.1
 django-countries==4.5
 icalendar==3.11.4
+#django-compressor==2.1.1
 #django-statsy==0.2.2
 #django-blog-zinnia==0.18.1
-#django-ckeditor-filebrowser-filer==0.2.3
+django-ckeditor-filebrowser-filer==0.2.3
 # https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz
